Visualization using scatterplot

--- a/Scatter_Plot.ipynb
+++ b/Scatter_Plot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUMkozNQvgFMsIll/Xin/M",
+      "authorship_tag": "ABX9TyM5aL/kLAB52UIut3+MZuix",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,48 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Scatter plot"
+      ],
       "metadata": {
-        "id": "ypIJiVQXVfeO"
+        "id": "psQ3ioWzh3fn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "5iahxCA2h65S"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "ickN5cGMiCs_"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "titanic"
+      ],
+      "metadata": {
+        "id": "y1OPN9kSiKD0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
